--- a/css/mystylesheet.css
+++ b/css/mystylesheet.css
@@ -16,9 +16,9 @@ body {
 	color:#444;
 }
 
-@media (min-width:1024px){
+@media (min-width:1024px) {
 body {
-	background-size: 100% 100%;
+	background-size: 100vw 100vh;
  }
 }
 
