--- a/css/game11.css
+++ b/css/game11.css
@@ -15,7 +15,7 @@
 }
 
 .game-button {
-  width: 200px;
+  width: 220px;
   padding: 10px 0;
 }
 
@@ -25,11 +25,16 @@
 
 .speaker-icon {
   float: left;
-  margin: -10px 10px;
+  margin: -10px 5px;
 }
 
+@media (min-width: 360px) {
+  .speaker-icon {
+    margin: -10px 10px;
+  }
+}  
+
 .blackboard {
-  display: none; /* Show after image is loaded */
   width: 220px;
   font-size: 17px;
   font-weight: bold;
